DX: add `pytest-cov` support

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,18 @@ setenv =
 commands =
   pytest {posargs}
 
+[testenv:cov]
+description =
+  Compute test coverage
+allowlist_externals =
+  pytest
+commands =
+  pytest {posargs:src tests} \
+    --cov-fail-under=50 \
+    --cov-report=html \
+    --cov-report=xml \
+    --cov=ampform_dpd
+
 [testenv:doc]
 description =
   Build documentation with Sphinx
