DX: add more GitHub Actions and `pytest-cov` (#3)
* MAINT: add codecov support
* MAINT: update pip constraints and pre-commit config

Co-authored-by: GitHub <noreply@github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,12 +23,14 @@ package_dir =
 test =
     numpy
     pytest >=6.0  # pyproject.toml
+    pytest-cov
     pytest-xdist
 format =
     black
     isort
 sty =
     %(format)s
+    %(test)s  # for pytest type hints
     pre-commit >=1.4.0
 dev =
     %(sty)s
