FIX: limit `nbmake` version

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ jupyter =
     jupyterlab-code-formatter
     jupyterlab-myst
 test =
-    nbmake
+    nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
     numpy
     pytest >=6.0  # pyproject.toml
     pytest-cov
