DOC!: add basic documentation with Sphinx (#5)
* DX!: push documentation to GitHub Pages
* FEAT: implement `aslatex()` extensions
* MAINT: clean up `tox` config
* MAINT: update pip constraints and pre-commit config

Co-authored-by: GitHub <noreply@github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,24 @@ package_dir =
     =src
 
 [options.extras_require]
+doc =
+    ipywidgets
+    importlib-metadata; python_version <"3.8.0"
+    myst-nb >=0.14  # nb_render_markdown_format for Markdown tables
+    sphinx-book-theme
+    sphinx-codeautolink[ipython]
+    sphinx-copybutton
+    sphinx-design
+    sphinx-togglebutton
+    tqdm
+jupyter =
+    %(doc)s
+    aquirdturtle-collapsible-headings
+    jupyterlab >=3.0
+    jupyterlab-code-formatter
+    jupyterlab-myst
 test =
+    nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
     numpy
     pytest >=6.0  # pyproject.toml
     pytest-cov
@@ -33,8 +50,11 @@ sty =
     %(test)s  # for pytest type hints
     pre-commit >=1.4.0
 dev =
+    %(doc)s
+    %(jupyter)s
     %(sty)s
     %(test)s
+    sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
 
 [options.packages.find]
