DX: define `linkcheck` job for `tox`

--- a/tox.ini
+++ b/tox.ini
@@ -109,6 +109,21 @@ changedir = docs/_build
 commands =
   jcache {posargs:notebook list}
 
+[testenv:linkcheck]
+description =
+  Check external links in the documentation (requires internet connection)
+passenv =
+  EXECUTE_NB
+  READTHEDOCS_VERSION
+allowlist_externals =
+  sphinx-build
+commands =
+  sphinx-build \
+    --color \
+    -T \
+    -b linkcheck \
+    docs/ docs/_build/linkcheck
+
 [testenv:nb]
 description =
   Run all notebooks with pytest
