DOC: create Dalitz plot

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,12 +23,14 @@ package_dir =
 doc =
     ipywidgets
     importlib-metadata; python_version <"3.8.0"
+    matplotlib
     myst-nb >=0.14  # nb_render_markdown_format for Markdown tables
     sphinx-book-theme
     sphinx-codeautolink[ipython]
     sphinx-copybutton
     sphinx-design
     sphinx-togglebutton
+    tensorwaves[jax]
     tqdm
 jupyter =
     %(doc)s
