--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,11 @@ author = Mikhail Mikhasenko, Remco de Boer
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPLv3 or later
+project_urls =
+    Tracker = https://github.com/ComPWA/ampform-dpd/issues
+    Changelog = https://github.com/ComPWA/ampform-dpd/releases
+    Documentation = https://compwa.github.io/ampform-dpd
+    Source = https://github.com/ComPWA/ampform-dpd
 
 [options]
 python_requires = >=3.7
