DX: set VSCode `typeCheckingMode`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
   "files.eol": "\n",
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.typeCheckingMode": "strict",
   "python.formatting.provider": "black",
   "python.linting.enabled": true,
   "python.testing.pytestArgs": ["--color=no"],
