FEAT: implement `perform_cached_lambdify()`

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,13 +18,23 @@ setup_requires =
 install_requires =
     ampform >=0.14.1  # Kibble and Kallen functions
     attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
+    cloudpickle
     sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
+    tensorwaves[jax]
     typing-extensions; python_version <"3.8.0"
 packages = find:
 package_dir =
     =src
 
 [options.extras_require]
+jax =
+    tensorwaves[jax]
+numba =
+    tensorwaves[numba]
+tf =
+    tensorwaves[tf]
+tensorflow =
+    %(tf)s
 doc =
     ipywidgets
     importlib-metadata; python_version <"3.8.0"
