--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ python_requires = >=3.7
 setup_requires =
     setuptools_scm
 install_requires =
-    ampform >=0.14.1  # Kibble and Kallen functions
+    ampform ~=0.14.4  # Kibble and Kallen functions, perform_cached_doit
     attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     cloudpickle
     sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
