--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "github.vscode-pull-request-github",
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-vsliveshare.vsliveshare",
     "oijaz.unicode-latex",
     "redhat.vscode-yaml",
