--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,4 +1,6 @@
 name: CI-docs
+env:
+  PYTHONHASHSEED: "0"
 
 on:
   push:
@@ -19,13 +21,21 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          key: |
+            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg', 'src/**') }}
+          path: |
+            ./docs/_build
+            ~/.cache/pip/
+            ~/.sympy-cache*/
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[doc] tox -c .constraints/py3.8.txt
+          pip install -c .constraints/py3.8.txt .[doc] tox
           sudo apt-get -y install pandoc
       - name: Build documentation and run notebooks
         run: tox -e docnb
