--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = ampform-dpd
 description = Symbolic expressions for Dalitz-Plot Decomposition
-author = Mikhail Mikhasenko, Remco de Boer
+author = Common Partial Wave Analysis
+author_email = compwa-admin@ep1.rub.de
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPLv3 or later
@@ -10,6 +11,22 @@ project_urls =
     Changelog = https://github.com/ComPWA/ampform-dpd/releases
     Documentation = https://compwa.github.io/ampform-dpd
     Source = https://github.com/ComPWA/ampform-dpd
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Intended Audience :: Education
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Physics
+    Typing :: Typed
 
 [options]
 python_requires = >=3.7
