--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,7 @@ root = true
 
 [*]
 end_of_line = lf
+indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
@@ -9,8 +10,14 @@ trim_trailing_whitespace = true
 [Makefile]
 indent_style = tab
 
+[*.{ipynb,md,rst_t}]
+indent_size = unset
+
 [*.{py,toml}]
 indent_size = 4
+
+[LICENSE]
+indent_size = unset
 
 [setup.cfg]
 indent_size = 4
