--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -c .constraints/py3.8.txt -e .[doc] tox
-          sudo apt-get -y install pandoc
+          sudo apt-get -y install graphviz pandoc
       - name: Check external links
         env:
           GITHUB_REPO: ${{ github.event.pull_request.head.repo.full_name }}
