--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -19,6 +19,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          key: |
+            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
+          path: |
+            ~/.cache/pip/
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
@@ -26,7 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -c .constraints/py3.8.txt -e .[doc] tox
-          sudo apt-get -y install pandoc
+          sudo apt-get -y install graphviz pandoc
       - name: Check external links
         env:
           GITHUB_REPO: ${{ github.event.pull_request.head.repo.full_name }}
