--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ ci:
   autoupdate_schedule: quarterly # already done by requirements-cron.yml
   skip:
     # hooks that don't work on pre-commit.ci
+    - editorconfig-checker
     - pyright
 
 repos:
@@ -12,7 +13,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -26,15 +27,36 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
+  - repo: https://github.com/ComPWA/repo-maintenance
+    rev: 0.0.159
+    hooks:
+      - id: check-dev-files
+        args:
+          - --no-cd
+          - --no-docs
+          - --no-prettierrc
+          - --pin-requirements=bimonthly
+      - id: format-setup-cfg
+
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
       - id: black
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v6.13.0
+    rev: v6.14.1
     hooks:
       - id: cspell
+
+  - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+    rev: 2.6.1
+    hooks:
+      - id: editorconfig-checker
+        name: editorconfig
+        exclude: >
+          (?x)^(
+            .*\.py
+          )$
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -81,12 +103,12 @@ repos:
       - id: prettier
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.277
+    rev: v1.1.281
     hooks:
       - id: pyright
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.0
+    rev: v3.2.2
     hooks:
       - id: pyupgrade
         args:
