DOC: describe main formulas from JPAC:2019
https://journals.aps.org/prd/abstract/10.1103/PhysRevD.101.034033

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ doc =
     sphinx-copybutton
     sphinx-design
     sphinx-togglebutton
+    sphinxcontrib-bibtex
     tensorwaves[jax]
     tqdm
 jupyter =
