--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -15,31 +15,4 @@ on:
 
 jobs:
   check_links:
-    name: Check external links
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          key: |
-            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
-          path: |
-            ~/.cache/pip/
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c .constraints/py3.8.txt -e .[doc] tox
-          sudo apt-get -y install graphviz pandoc
-      - name: Check external links
-        env:
-          GITHUB_REPO: ${{ github.event.pull_request.head.repo.full_name }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          BRANCH=main
-          if [[ "$GITHUB_HEAD_REF" != "" ]]; then
-            BRANCH=$GITHUB_HEAD_REF
-          fi
-          READTHEDOCS_VERSION=$BRANCH tox -e linkcheck
+    uses: ComPWA/actions/.github/workflows/linkcheck.yml@linkcheck
