MAINT: merge `linkcheck` job in to Documentation workflow
The name in the "Checks overview" will now be:
"Documentation / linkcheck / Check external links"

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -16,6 +16,9 @@ on:
   workflow_dispatch:
 
 jobs:
+  linkcheck:
+    uses: ComPWA/actions/.github/workflows/linkcheck.yml@linkcheck
+
   documentation:
     name: Build documentation and run notebooks
     runs-on: ubuntu-20.04
