--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -19,34 +19,8 @@ jobs:
   linkcheck:
     uses: ComPWA/actions/.github/workflows/linkcheck.yml@linkcheck
 
-  documentation:
-    name: Build documentation and run notebooks
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          key: |
-            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg', 'src/**') }}
-          path: |
-            ./docs/_build
-            ~/.cache/pip/
-            ~/.sympy-cache*/
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c .constraints/py3.8.txt .[doc] tox
-          sudo apt-get -y install pandoc
-      - name: Build documentation and run notebooks
-        run: tox -e docnb
-      - uses: actions/upload-artifact@v3
-        if: ${{ always() }}
-        with:
-          name: html
-          path: docs/_build/html
+  docnb:
+    uses: ComPWA/actions/.github/workflows/docnb.yml@linkcheck
 
   gh-pages:
     name: Upload to GitHub Pages
