FIX: rename `documetation` job in `needs` section
Fixes this problem:
https://github.com/ComPWA/ampform-dpd/actions/runs/3979479292

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -24,7 +24,7 @@ jobs:
 
   gh-pages:
     name: Upload to GitHub Pages
-    needs: documentation
+    needs: docnb
     if: >
       github.repository == 'ComPWA/ampform-dpd' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-20.04
