TEST: set job names
Hopefully improves log overview:
https://github.com/ComPWA/ampform-dpd/actions/runs/3979517444

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -17,9 +17,11 @@ on:
 
 jobs:
   linkcheck:
+    name: Check external links
     uses: ComPWA/actions/.github/workflows/linkcheck.yml@linkcheck
 
   docnb:
+    name: Execute and build documentation
     uses: ComPWA/actions/.github/workflows/docnb.yml@linkcheck
 
   gh-pages:
