FIX: add `pybtex` and `docutils` to `sty` requirements
https://github.com/ComPWA/ampform-dpd/actions/runs/3986990438/jobs/6836217337

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,9 @@ format =
 sty =
     %(format)s
     %(test)s  # for pytest type hints
+    docutils
     pre-commit >=1.4.0
+    pybtex
 dev =
     %(doc)s
     %(jupyter)s
