DOC: add phase of the particle-2 convention (#40)
* DOC: abbreviate references with et al.

* DOC: add link to JPAC:2021rxu
  https://doi.org/10.1016/j.ppnp.2022.103981

* DOC: center diff cross section equation

* DX: add `docutils`. `pybtex`, and `Sphinx` to `sty` requirements
  https://github.com/ComPWA/ampform-dpd/actions/runs/3986990438/jobs/6836217337
  https://github.com/ComPWA/ampform-dpd/actions/runs/3987052571/jobs/6836360055

* DX: wrap lines at 72 in commit messages

* FIX: remove ``` typo from math

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+  "[bibtex]": {
+    "editor.formatOnSave": false
+  },
+  "[git-commit]": {
+    "rewrap.wrappingColumn": 72
+  },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
