--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,10 @@ format =
 sty =
     %(format)s
     %(test)s  # for pytest type hints
+    docutils
     pre-commit >=1.4.0
+    pybtex
+    sphinx
 dev =
     %(doc)s
     %(jupyter)s
