DX: shorten documentation job ID
Job title looks long in the check overview
`Documentation / documentation / linkcheck / Check external links`

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  documentation:
+  docs:
     uses: ComPWA/actions/.github/workflows/ci-docs.yml@linkcheck
     with:
       gh-pages: true
