--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -13,46 +13,18 @@ on:
 
 jobs:
   codecov:
-    name: Unit tests + coverage
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os:
           - ubuntu-20.04
         python-version:
           - "3.7"
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          key: |
-            ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
-          path: |
-            .pytest_cache
-            ~/.cache/pip/
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c .constraints/py${{ matrix.python-version }}.txt -e .[test]
-      - name: Test with pytest-cov
-        run: pytest --cov=ampform_dpd --cov-report=xml
-      - uses: actions/upload-artifact@v3
-        if: ${{ always() }}
-        with:
-          name: test_output_${{ matrix.os }}_${{ matrix.python-version }}
-          path: tests/output
-      - uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.xml
-          # cspell:ignore unittests
-          flags: unittests
+    uses: ComPWA/actions/.github/workflows/codecov.yml@linkcheck
+    with:
+      python-version: ${{ matrix.python-version }}
+      runs-on: ${{ matrix.os }}
 
   pytest:
-    name: Unit tests
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -66,26 +38,7 @@ jobs:
         exclude:
           - os: ubuntu-20.04 # coverage job
             python-version: "3.7"
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          key: |
-            ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
-          path: |
-            .pytest_cache
-            ~/.cache/pip/
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c .constraints/py${{ matrix.python-version }}.txt -e .[test]
-      - name: Run unit tests and doctests with pytest
-        run: pytest -n auto
-      - uses: actions/upload-artifact@v3
-        if: ${{ always() }}
-        with:
-          name: test_output_${{ matrix.os }}_${{ matrix.python-version }}
-          path: tests/output
+    uses: ComPWA/actions/.github/workflows/pytest.yml@linkcheck
+    with:
+      python-version: ${{ matrix.python-version }}
+      runs-on: ${{ matrix.os }}
