FIX: specify `package-name`
https://github.com/ComPWA/ampform-dpd/actions/runs/3988168237

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -23,6 +23,7 @@ jobs:
     with:
       python-version: ${{ matrix.python-version }}
       runs-on: ${{ matrix.os }}
+      package-name: ampform_dpd
 
   pytest:
     strategy:
