--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,49 @@
-name: pre-commit
+name: CI
+env:
+  PYTHONHASHSEED: "0"
 
 on:
   push:
     branches:
       - main
       - epic/*
-      - "[0-9]+.[0-9]+.x"
   pull_request:
     branches:
       - main
       - epic/*
-      - "[0-9]+.[0-9]+.x"
   workflow_dispatch:
 
 jobs:
+  docs:
+    uses: ComPWA/actions/.github/workflows/ci-docs.yml@linkcheck
+    with:
+      gh-pages: true
+
+  codecov:
+    uses: ComPWA/actions/.github/workflows/pytest.yml@linkcheck
+    with:
+      python-version: "3.7"
+      runs-on: ubuntu-20.04
+
+  pytest:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-20.04
+        python-version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+        exclude:
+          - os: ubuntu-20.04 # coverage job
+            python-version: "3.7"
+    uses: ComPWA/actions/.github/workflows/pytest.yml@linkcheck
+    with:
+      python-version: ${{ matrix.python-version }}
+      runs-on: ${{ matrix.os }}
+
   style:
     name: Style checks
     runs-on: ubuntu-20.04
