--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,13 @@ jobs:
     with:
       gh-pages: true
 
+  style:
+    uses: ComPWA/actions/.github/workflows/ci-style.yml@linkcheck
+    with:
+      hooks: |
+        editorconfig-checker
+        pyright
+
   test:
     strategy:
       fail-fast: false
@@ -41,27 +48,3 @@ jobs:
     with:
       python-version: ${{ matrix.python-version }}
       runs-on: ${{ matrix.os }}
-
-  style:
-    name: Style checks
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          key: |
-            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', '.pre-commit-config.yaml') }}
-          path: |
-            ~/.cache/pip/
-            ~/.cache/pre-commit/
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c .constraints/py3.8.txt -e .[sty]
-      - name: Run pre-commit hooks that don't work on pre-commit.ci
-        run: |-
-          pre-commit run editorconfig-checker -a --color always
-          pre-commit run pyright -a --color always
