FIX: remove newlines from `hooks` input
https://yaml-multiline.info/
https://github.com/ComPWA/ampform-dpd/actions/runs/3988722473/jobs/6840254021

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
   style:
     uses: ComPWA/actions/.github/workflows/ci-style.yml@linkcheck
     with:
-      hooks: |
+      hooks: >-
         editorconfig-checker
         pyright
 
