DX: rename `test` job back to `pytest`
Check overview:
"CI / test (ubuntu-20.04, 3.9) / Unit tests"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,7 @@ jobs:
     with:
       gh-pages: true
 
-  style:
-    uses: ComPWA/actions/.github/workflows/pre-commit.yml@linkcheck
-    with:
-      hooks: >-
-        editorconfig-checker
-        pyright
-
-  test:
+  pytest:
     strategy:
       fail-fast: false
       matrix:
@@ -48,3 +41,10 @@ jobs:
     with:
       python-version: ${{ matrix.python-version }}
       runs-on: ${{ matrix.os }}
+
+  style:
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@linkcheck
+    with:
+      hooks: >-
+        editorconfig-checker
+        pyright
