Revert "DX: rename `test` job back to `pytest`"
This reverts commit de5e099b9219304d0b1eeec9bec0ebd3379265e1.

Fixes this problem:
https://github.com/ComPWA/ampform-dpd/actions/runs/3988878637

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,14 @@ jobs:
     with:
       gh-pages: true
 
-  pytest:
+  style:
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@linkcheck
+    with:
+      hooks: >-
+        editorconfig-checker
+        pyright
+
+  test:
     strategy:
       fail-fast: false
       matrix:
@@ -41,10 +48,3 @@ jobs:
     with:
       python-version: ${{ matrix.python-version }}
       runs-on: ${{ matrix.os }}
-
-  style:
-    uses: ComPWA/actions/.github/workflows/pre-commit.yml@linkcheck
-    with:
-      hooks: >-
-        editorconfig-checker
-        pyright
