DX: switch to `ubuntu-22.04`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,17 +30,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - ubuntu-20.04
         python-version:
           - "3.8"
           - "3.9"
           - "3.10"
         include:
           - coverage-target: ampform_dpd
-            os: ubuntu-20.04
             python-version: "3.7"
     uses: ComPWA/actions/.github/workflows/pytest.yml@linkcheck
     with:
       python-version: ${{ matrix.python-version }}
-      runs-on: ${{ matrix.os }}
+      runs-on: ubuntu-22.04
