--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -18,82 +18,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  pip-constraints:
-    name: Update pip constraints
-    if: >-
-      github.event_name == 'schedule' ||
-      github.event.pull_request.head.repo.full_name == github.repository
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ComPWA/update-pip-constraints@main
-        with:
-          python-version: ${{ matrix.python-version }}
-
-  pre-commit:
-    name: pre-commit autoupdate
-    if: >-
-      github.event_name == 'schedule' ||
-      github.event.pull_request.head.repo.full_name == github.repository
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ComPWA/update-pre-commit@main
-
-  push:
-    name: Push changes
-    runs-on: ubuntu-22.04
-    needs:
-      - pip-constraints
-      - pre-commit
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.PAT }}
-          # GITHUB_TOKEN will not rerun checks after pushing to a PR branch
-      - uses: actions/download-artifact@v3
-      - run: ls -A
-      - name: Move artifacts to correct location
-        run: |
-          if [[ -d artifact ]]; then
-            cd artifact
-            ls -A
-            [[ -f .pre-commit-config.yaml ]] && mv -f .pre-commit-config.yaml ..
-            [[ "$(ls)" != "" ]] && mv -f * ../.constraints/
-          fi
-      - run: git status -s
-      - name: Commit and push changes
-        if: github.event_name != 'schedule'
-        run: |
-          git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}
-          git config --global user.name "GitHub"
-          git config --global user.email "noreply@github.com"
-          git checkout -b ${GITHUB_HEAD_REF}
-          if [[ $(git status -s) ]]; then
-            git add -A
-            git commit -m "MAINT: update pip constraints and pre-commit"
-            git config pull.rebase true
-            git pull origin ${GITHUB_HEAD_REF}
-            git push origin HEAD:${GITHUB_HEAD_REF}
-          fi
-      - name: Create Pull Request
-        if: github.event_name == 'schedule'
-        uses: peter-evans/create-pull-request@v4
-        with:
-          commit-message: "MAINT: update pip constraints and pre-commit"
-          committer: GitHub <noreply@github.com>
-          author: GitHub <noreply@github.com>
-          title: "MAINT: update pip constraints and pre-commit"
-          labels: |
-            🔨 Maintenance
-          branch-suffix: timestamp
-          delete-branch: true
-          token: ${{ secrets.PAT }}
+  requirements:
+    uses: ComPWA/actions/.github/workflows/requirements.yml@dev
+    with:
+      token: ${{ secrets.PAT }}
