FIX: correctly set secrets

--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -20,5 +20,5 @@ on:
 jobs:
   requirements:
     uses: ComPWA/actions/.github/workflows/requirements.yml@dev
-    with:
-      secrets: ${{ secrets.PAT }}
+    secrets:
+      token: ${{ secrets.PAT }}
