Revert "TEMP: test ComPWA/actions@d62c143"
This reverts commit 70cfeeaa457dc263a4b19f4ce509ab02c31761eb.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,11 @@
+ci:
+  autoupdate_commit_msg: "MAINT: update pip constraints and pre-commit"
+  autoupdate_schedule: quarterly # already done by requirements-cron.yml
+  skip:
+    # hooks that don't work on pre-commit.ci
+    - editorconfig-checker
+    - pyright
+
 repos:
   - repo: meta
     hooks:
