DX: merge CD workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,18 +17,24 @@ on:
       - main
       - epic/*
   workflow_dispatch:
+    inputs:
+      specific-pip-packages:
+        description: Run CI with specific pip packages
+        required: false
+        type: string
 
 jobs:
   doc:
-    uses: ComPWA/actions/.github/workflows/ci-docs.yml@dev
+    uses: ComPWA/actions/.github/workflows/ci-docs.yml@v1
     with:
       gh-pages: true
-
+      specific-pip-packages: ${{ inputs.specific-pip-packages }}
   pytest:
-    uses: ComPWA/actions/.github/workflows/pytest.yml@dev
+    uses: ComPWA/actions/.github/workflows/pytest.yml@v1
     with:
       coverage-target: ampform_dpd
       macos-python-version: "3.7"
-
+      specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
-    uses: ComPWA/actions/.github/workflows/pre-commit.yml@dev
+    if: inputs.specific-pip-packages == ''
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@v1
