--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -7,7 +7,7 @@ references:
 
 categories:
   - title: ✨ New features
-    label: 💡 Feature
+    label: ✨ Feature
   - title: ⚠️ Enhancements and optimizations
     label: ⚙️ Enhancement
   - title: ⚠️ API changes
@@ -32,6 +32,6 @@ replacers:
 sort-direction: ascending
 
 template: |
-  _See all documentation for the latest version [here](https://compwa.github.io/ampform-dpd)._
-
   $CHANGES
+
+  _The full changelog as commits can be found [here](https://github.com/ComPWA/ampform-dpd/compare/$PREVIOUS_TAG...$NEXT_PATCH_VERSION)._
