--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -1,6 +1,9 @@
-# cspell:ignore agilepathway commitlint kode
-
 name: PR linting
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   pull_request:
     types:
@@ -14,20 +17,22 @@ on:
 jobs:
   check-labels:
     name: Check labels
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
+      # cspell:ignore agilepathway
       - uses: docker://agilepathway/pull-request-label-checker:latest
         with:
           any_of:
-            🐛 Bug,💡 Feature,⚙️ Enhancement,⚠️ Interface,❗ Behavior,📝 Docs,🔨
+            🐛 Bug,✨ Feature,⚙️ Enhancement,⚠️ Interface,❗ Behavior,📝 Docs,🔨
             Maintenance,🖱️ DX
           none_of: Epic,💫 Good first issue
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 
   check-title:
     name: Check title
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - run: npm install @commitlint/config-conventional
+        # cspell:ignore commitlint kode
       - uses: JulienKode/pull-request-name-linter-action@v0.5.0
