MAINT: add `graphviz`, `phasespace` and `ipympl` support

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,11 +34,11 @@ python_requires = >=3.7
 setup_requires =
     setuptools_scm
 install_requires =
-    ampform ~=0.14.4  # Kibble and Kallen functions, perform_cached_doit
+    ampform[viz] ~=0.14.4  # Kibble and Kallen functions, perform_cached_doit
     attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     cloudpickle
     sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
-    tensorwaves[jax]
+    tensorwaves[jax,phsp]
     typing-extensions; python_version <"3.8.0"
 packages = find:
 package_dir =
@@ -54,6 +54,7 @@ tf =
 tensorflow =
     %(tf)s
 doc =
+    ipympl
     ipywidgets
     importlib-metadata; python_version <"3.8.0"
     matplotlib
