--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,7 @@ jupyter =
     jupyterlab >=3.0
     jupyterlab-code-formatter
     jupyterlab-myst
+    ypy-websocket !=0.8.3  # https://github.com/ComPWA/ampform-dpd/actions/runs/4224092683/jobs/7334622738
 test =
     nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
     numpy
