FIX: move extended dependencies to `doc` requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,11 +34,11 @@ python_requires = >=3.7
 setup_requires =
     setuptools_scm
 install_requires =
-    ampform[viz] ~=0.14.4  # Kibble and Kallen functions, perform_cached_doit
+    ampform ~=0.14.4  # Kibble and Kallen functions, perform_cached_doit
     attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     cloudpickle
     sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
-    tensorwaves[jax,phsp]
+    tensorwaves[jax]
     typing-extensions; python_version <"3.8.0"
 packages = find:
 package_dir =
@@ -54,6 +54,7 @@ tf =
 tensorflow =
     %(tf)s
 doc =
+    graphviz
     ipympl
     ipywidgets
     importlib-metadata; python_version <"3.8.0"
@@ -65,7 +66,7 @@ doc =
     sphinx-design
     sphinx-togglebutton
     sphinxcontrib-bibtex
-    tensorwaves[jax]
+    tensorwaves[phsp]
     tqdm
 jupyter =
     %(doc)s
