--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ doc =
     sphinx-design
     sphinx-togglebutton
     sphinxcontrib-bibtex
+    tensorflow==2.12.0rc0; python_version >="3.11.0"  # https://github.com/tensorflow/tensorflow/issues/58032#issuecomment-1437120565
     tensorwaves[phsp]
     tqdm
 jupyter =
