--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ tf =
 tensorflow =
     %(tf)s
 doc =
+    graphviz
+    ipympl
     ipywidgets
     importlib-metadata; python_version <"3.8.0"
     matplotlib
@@ -64,7 +66,8 @@ doc =
     sphinx-design
     sphinx-togglebutton
     sphinxcontrib-bibtex
-    tensorwaves[jax]
+    tensorflow==2.12.0rc0; python_version >="3.11.0"  # https://github.com/tensorflow/tensorflow/issues/58032#issuecomment-1437120565
+    tensorwaves[phsp]
     tqdm
 jupyter =
     %(doc)s
@@ -72,6 +75,7 @@ jupyter =
     jupyterlab >=3.0
     jupyterlab-code-formatter
     jupyterlab-myst
+    ypy-websocket !=0.8.3  # https://github.com/ComPWA/ampform-dpd/actions/runs/4224092683/jobs/7334622738
 test =
     nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
     numpy
