--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,6 @@ envlist =
   nb,
   py,
   sty,
-passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
@@ -38,9 +37,7 @@ commands =
   sphinx-build -nW --keep-going -b html docs/ docs/_build/html
 description =
   Build documentation with Sphinx
-passenv =
-  EXECUTE_NB
-  TERM
+passenv = *
 setenv =
   PYTHONHASHSEED = 0
 
@@ -66,9 +63,7 @@ commands =
     docs/ docs/_build/html
 description =
   Set up a server to directly preview changes to the HTML pages
-passenv =
-  EXECUTE_NB
-  TERM
+passenv = *
 setenv =
   PYTHONHASHSEED = 0
 
@@ -79,8 +74,7 @@ commands =
   sphinx-build -nW --keep-going -b html docs/ docs/_build/html
 description =
   Execute Jupyter notebooks and build documentation with Sphinx
-passenv =
-  TERM
+passenv = *
 setenv =
   EXECUTE_NB = yes
   PYTHONHASHSEED = 0
@@ -117,9 +111,7 @@ commands =
     docs/ docs/_build/linkcheck
 description =
   Check external links in the documentation (requires internet connection)
-passenv =
-  EXECUTE_NB
-  READTHEDOCS_VERSION
+passenv = *
 
 [testenv:nb]
 allowlist_externals =
