--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,6 @@ github:
 
 vscode:
   extensions:
-    - bungcip.better-toml
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
@@ -22,11 +21,12 @@ vscode:
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-toolsai.vscode-jupyter-cell-tags
+    - ms-vscode.live-server
     - ms-vsliveshare.vsliveshare
     - oijaz.unicode-latex
     - redhat.vscode-yaml
     - stkb.rewrap
     - streetsidesoftware.code-spell-checker
-    - travisillig.vscode-json-stable-stringify
+    - tamasfe.even-better-toml
     - tyriar.sort-lines
     - yzhang.markdown-all-in-one
