--- a/setup.cfg
+++ b/setup.cfg
@@ -66,7 +66,7 @@ doc =
     sphinx-design
     sphinx-togglebutton
     sphinxcontrib-bibtex
-    tensorflow==2.12.0rc0; python_version >="3.11.0"  # https://github.com/tensorflow/tensorflow/issues/58032#issuecomment-1437120565
+    tensorflow==2.12.0rc1; python_version >="3.11.0"  # https://github.com/tensorflow/tensorflow/issues/58032#issuecomment-1437120565
     tensorwaves[phsp]
     tqdm
 jupyter =
@@ -75,7 +75,7 @@ jupyter =
     jupyterlab >=3.0
     jupyterlab-code-formatter
     jupyterlab-myst
-    ypy-websocket !=0.8.3  # https://github.com/ComPWA/ampform-dpd/actions/runs/4224092683/jobs/7334622738
+    ypy-websocket!=0.8.3,!=0.8.4  # https://github.com/ComPWA/ampform-dpd/actions/runs/4350341987/jobs/7600958934#step:3:78
 test =
     nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
     numpy
