--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,7 @@ repos:
     hooks:
       - id: check-dev-files
         args:
+          - --doc-apt-packages=graphviz
           - --no-prettierrc
           - --pin-requirements=bimonthly
           - --repo-name=ampform-dpd
