MAINT: pin CI workflow for GitHub Actions extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
   "editor.formatOnSave": true,
   "editor.rulers": [88],
   "files.eol": "\n",
+  "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   "livePreview.defaultPreviewPath": "docs/_build/html",
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
