--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.184
+    rev: 0.0.186
     hooks:
       - id: check-dev-files
         args:
@@ -47,7 +47,6 @@ repos:
       - id: nbqa-pyupgrade
         args:
           - --py37-plus
-
       - id: nbqa-ruff
         args:
           - --fix
@@ -98,7 +97,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+    rev: v3.0.0
     hooks:
       - id: prettier
 
@@ -115,7 +114,7 @@ repos:
           - --py37-plus
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.0.276"
+    rev: v0.0.277
     hooks:
       - id: ruff
         args:
