--- a/setup.cfg
+++ b/setup.cfg
@@ -83,9 +83,11 @@ test =
     pytest-xdist
 format =
     black
-    isort
+lint =
+    ruff
 sty =
     %(format)s
+    %(lint)s
     %(test)s  # for pytest type hints
     docutils
     pre-commit >=1.4.0
