--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ jupyter =
     jupyterlab-myst
     ypy-websocket <0.8.3; python_version <"3.8.0"
 test =
-    nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
+    nbmake
     numpy
     pytest >=6.0  # pyproject.toml
     pytest-cov
