MAINT: restrict `nbmake` only for Python 3.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,7 @@ jupyter =
     ypy-websocket <0.8.3; python_version <"3.8.0"
 test =
     nbmake
+    nbmake <1.3; python_version <"3.8.0"
     numpy
     pytest >=6.0  # pyproject.toml
     pytest-cov
