--- a/setup.cfg
+++ b/setup.cfg
@@ -72,7 +72,9 @@ jupyter =
     %(doc)s
     jupyterlab >=3.0
     jupyterlab-code-formatter
+    jupyterlab-lsp
     jupyterlab-myst
+    python-lsp-server[rope]
     ypy-websocket <0.8.3; python_version <"3.8.0"
 test =
     nbmake
