--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.198
+    rev: 0.0.199
     hooks:
       - id: check-dev-files
         args:
@@ -36,6 +36,7 @@ repos:
           - --pin-requirements=bimonthly
           - --repo-name=ampform-dpd
           - --repo-title=AmpForm-DPD
+      - id: colab-toc-visible
       - id: format-setup-cfg
 
   - repo: https://github.com/nbQA-dev/nbQA
