--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -1,5 +1,4 @@
 name: PR linting
-
 on:
   pull_request:
     types:
@@ -15,8 +14,7 @@ jobs:
     name: Check labels
     runs-on: ubuntu-22.04
     steps:
-      # cspell:ignore agilepathway
-      - uses: docker://agilepathway/pull-request-label-checker:latest
+      - uses: docker://agilepathway/pull-request-label-checker:latest # cspell:ignore agilepathway
         with:
           any_of: >-
             🐛 Bug,✨ Feature,⚙️ Enhancement,⚠️ Interface,❗ Behavior,📝 Docs,🔨 Maintenance,🖱️ DX
@@ -28,6 +26,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - run: npm install @commitlint/config-conventional
-        # cspell:ignore commitlint kode
-      - uses: JulienKode/pull-request-name-linter-action@v0.5.0
+      - run: npm install @compwa/commitlint-config
+      - name: Create commitlint config
+        run: |
+          echo "module.exports = {extends: ['@compwa/commitlint-config']}" > commitlint.config.js
+      - uses: JulienKode/pull-request-name-linter-action@v0.5.0 # cspell:ignore kode
