--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,6 +17,7 @@ vscode:
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
+    - executablebookproject.myst-highlight
     - garaioag.garaio-vscode-unwanted-recommendations
     - github.vscode-github-actions
     - github.vscode-pull-request-github
