--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.203
+    rev: 0.1.0rc0
     hooks:
       - id: check-dev-files
         args:
@@ -37,6 +37,7 @@ repos:
           - --repo-name=ampform-dpd
           - --repo-title=AmpForm-DPD
       - id: colab-toc-visible
+
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
     hooks:
