--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ doc = [
     "tensorwaves[phsp]",
     "tqdm",
     'importlib-metadata; python_version <"3.8.0"',
+    'phasespace<1.9.0; python_version <"3.8.0"',
 ]
 format = [
     "black",
